New files. works

--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -1,5 +1,5 @@
 <div class="imagescroll"></div>
-<a name="top" />
+<a name="top"></a>
 <section class="content movie1 L40">
   <div class="prearticles intro">
     <h1><span class="large">Digging</span> <span class="small">for</span> 14,000 Years</h1>
@@ -274,11 +274,6 @@
       </div>
     </label>
   </div>
-  <div class="parallax-bg3a"></div>
-  <div class="parallax-bg3b"></div>
-  <div class="parallax-bg2a"></div>
-  <div class="parallax-bg2b"></div>
-  <div class="parallax-bg1"></div>
   <div class="timeline">
     <ul>
       <li class="fact">
@@ -315,7 +310,12 @@
       <li class="fact">14,000 years ago</li>
     </ul>
   </div>
-
+  <div class="parallax-bg3a"></div>
+  <div class="parallax-bg3b"></div>
+  <div class="parallax-bg2a"></div>
+  <div class="parallax-bg2b"></div>
+  <div class="parallax-bg1"></div>
+  
 </section>
 <section class="footer L10">
   <h1>Thank you</h1>
